Bug 1789625 - [Colorway Closet] Fix homepage reset success checkmark alignment. r=bigiri
Differential Revision: https://phabricator.services.mozilla.com/D156689

UltraBlame original commit: a27b48634610f4dda7782a77acd2760d412ad6cc

--- a/browser/components/colorways/colorwaycloset.css
+++ b/browser/components/colorways/colorwaycloset.css
@@ -1419,14 +1419,18 @@ column
 )
 ;
 }
-.
+#
+homepage
+-
 reset
 -
 prompt
-.
-success
+#
+homepage
 -
-prompt
+reset
+-
+success
 {
 width
 :
@@ -1466,16 +1470,20 @@ align
 )
 ;
 }
-.
+#
+homepage
+-
 reset
 -
 prompt
 >
 span
-.
-success
+#
+homepage
 -
-prompt
+reset
+-
+success
 >
 span
 {
@@ -1501,10 +1509,12 @@ not
 success
 )
 >
-.
-success
+#
+homepage
 -
-prompt
+reset
+-
+success
 #
 homepage
 -
@@ -1514,7 +1524,9 @@ container
 .
 success
 >
-.
+#
+homepage
+-
 reset
 -
 prompt
@@ -1529,24 +1541,41 @@ homepage
 -
 reset
 -
-container
->
-.
 success
+>
+span
+{
+position
+:
+relative
+;
+padding
 -
-prompt
+inline
+-
+start
+:
+calc
+(
+22px
++
+.
+5em
+)
+;
+}
+#
+homepage
+-
+reset
+-
+success
 >
 span
 :
 :
 before
 {
-display
-:
-inline
--
-block
-;
 content
 :
 "
@@ -1599,6 +1628,13 @@ fill
 :
 white
 ;
+border
+-
+radius
+:
+100
+%
+;
 width
 :
 22px
@@ -1607,26 +1643,33 @@ height
 :
 22px
 ;
-border
--
-radius
+position
 :
-15px
+absolute
 ;
-vertical
--
-align
-:
-middle
-;
-margin
+inset
 -
 inline
 -
-end
+start
 :
 0
-.
-5em
+;
+inset
+-
+block
+-
+start
+:
+calc
+(
+(
+1em
+-
+22px
+)
+/
+2
+)
 ;
 }
